add page collection

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,7 @@
 ---
 import Image from '~/components/common/Image.astro';
+
+const { coverImageSrc, postTitle,introText, destinationText } = Astro.props;
 ---
 
 <header class="page-head">
