--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
 import Image from '~/components/common/Image.astro';
 
-const { coverImageSrc, postTitle,introText, destinationText } = Astro.props;
+const { coverImageSrc, imageAlt,introText, destinationText } = Astro.props;
 ---
 
 <header class="page-head">
@@ -13,7 +13,7 @@ const { coverImageSrc, postTitle,introText, destinationText } = Astro.props;
             widths={[400, 900]}
             width={400}
             sizes="(max-width: 900px) 400px, 900px"
-            alt={postTitle}
+            alt={imageAlt}
             aspectRatio="16:9"
             layout="cover"
             loading="eager"
