update content break down components

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,15 +1,29 @@
 ---
 import Image from '~/components/common/Image.astro';
 
-const { coverImageSrc, imageAlt,introText, destinationText } = Astro.props;
+const {
+  coverImageSrc,
+  imageAlt,
+  introText,
+  destinationText,
+  isHome,
+  postTitle,
+  homeBreadcrumb,
+  asia,
+  asiaLink,
+  sriLankaLink,
+  sriLanka,
+} = Astro.props;
 ---
 
-<header class="page-head">
+<div class={isHome ? '' : 'single'}>
+  <header class="page-head">
     <div class="page-cover__container">
       <div class="page-cover blog-bubble-mask">
         <div class="page-cover__image">
           <Image
             src={coverImageSrc}
+            class="w-full h-full rounded shadow-lg bg-gray-400 dark:bg-slate-700"
             widths={[400, 900]}
             width={400}
             sizes="(max-width: 900px) 400px, 900px"
@@ -21,26 +35,81 @@ const { coverImageSrc, imageAlt,introText, destinationText } = Astro.props;
           />
         </div>
       </div>
-      <div class="home-cover__content">
-        <div class="home-cover__content-container">
-          <div class="salt-icon__container">
-            <span class="planning-link__link-icon salt-icon salt-icon--shaka"></span>
+      {
+        isHome ? (
+          <div class="home-cover__content">
+            <div class="home-cover__content-container">
+              <div class="salt-icon__container">
+                <span class="planning-link__link-icon salt-icon salt-icon--shaka" />
+              </div>
+              <p>
+                <em>{introText}</em>
+              </p>
+              <div class="destination-text">
+                <p>
+                  <em>{destinationText}</em>
+                </p>
+              </div>
+            </div>
           </div>
-          <p>
-            <em>{introText}</em>
-          </p>
-          <div class="destination-text">
-            <p>
-              <em>{destinationText}</em>
-            </p>
+        ) : (
+          <div class="post-cover__content">
+            <div class="post-cover__content-container">
+              <>
+                <h1 class="post-cover__title" itemprop="name headline">
+                  {postTitle}
+                </h1>
+                <nav class="post-breadcrumbs">
+                  <ol class="post-breadcrumbs__list" vocab="http://schema.org/" typeof="BreadcrumbList">
+                    <li
+                      class="post-breadcrumbs__item post-breadcrumbs__item-all"
+                      property="itemListElement"
+                      typeof="ListItem"
+                    >
+                      <>
+                        <a property="item" typeof="WebPage" href="/" title="Home">
+                          <svg class="icon">
+                            <use xlink:href="#icon-arrow-small" />
+                          </svg>
+                          <span style="display:none" property="name">
+                            {homeBreadcrumb}
+                          </span>
+                        </a>
+                        <meta property="position" content="1" />
+                      </>
+                    </li>
+                    <li class="post-breadcrumbs__item">
+                      <a title="asia" href={asiaLink}>
+                        <span>{asia}</span>
+                      </a>
+                    </li>
+                    <li class="post-breadcrumbs__item" property="itemListElement" typeof="ListItem">
+                      <>
+                        <a property="item" typeof="WebPage" href={sriLankaLink}>
+                          <span property="name">{sriLanka}</span>
+                        </a>
+                        <meta property="position" content="2" />
+                      </>
+                    </li>
+                  </ol>
+                </nav>
+                <div class="post-cover__intro">
+                  <p>
+                    <span style="font-weight: 400">{introText}</span>
+                  </p>
+                </div>
+              </>
+            </div>
           </div>
-        </div>
-      </div>
+        )
+      }
     </div>
+    <!-- logo site in mobile -->
     <div class="page-head__container">
       <div class="logo__container">
-        <a href="https://www.alma-calatoreste.com/" title="Salt in our Hair Travel Blog" class="logo"></a>
+        <a href="/" title="Alma Calatoreste Travel Blog" class="logo"></a>
         <span class="logo logo--shadow"></span>
       </div>
     </div>
   </header>
+</div>
